isWord field changed to Yes/No instead of toggling y/n.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div>
             <p>Type word to see if it's in the dictionary.</p>
             <b>Enter Word:</b> <input type="text" id="isWord" onkeyup="setValidity()" style="width:130px"></input>
-            <span id="y" style="color:white">Y</span><span id="n" style="color:white">N</span>
+            <output id="YN">???</output>
             <p>Or search dictionary with criteria.</p>
             <b>Starts With:</b> <input type="text" id="start"></input><br><br>
             <b>Ends With:</b> <input type="text" id="end"></input><br><br>
