--- a/index.html
+++ b/index.html
@@ -1,30 +1,61 @@
 <!DOCTYPE html>
 <html>
-    <meta charset="UTF-8">
-    <script type="text/javascript" src="src/dictionary.js"></script>
-    <script type="text/javascript" src="src/word matcher.js" charset="utf-8"></script>
-    <style type="text/css">
-        body {
-            text-align: center;
-            width:290px;
-            border: black solid;
-        }
-        .matches{
-            resize: none;
-            overflow-y: scroll;
-        }
-    </style>
-    <body>
-        <header><h1>Word Game<br>Companion</h1></header>
-        <div>
-            <p>Type word to see if it's in the dictionary.</p>
-            <b>Enter Word:</b> <input type="text" id="isWord" onkeyup="setValidity()" style="width:130px"></input>
-            <output id="YN">???</output>
-            <p>Or search dictionary with criteria.</p>
-            <b>Starts With:</b> <input type="text" id="start"></input><br><br>
-            <b>Ends With:</b> <input type="text" id="end"></input><br><br>
-            <button onclick="matchWords()">Get Search Results</button><br>
-            <textarea class="matches" id="matchedWords" style="width: 250px; height: 200px" readonly=true></textarea>
-        </div>
-    </body>
-</html>
+<meta charset="UTF-8">
+<script type="text/javascript" src="src/dictionary.js"></script>
+<script type="text/javascript" src="src/word matcher.js" charset="utf-8"></script>
+<style type="text/css">
+
+html,body{
+  width:100%;
+  height:100%;
+  margin:0;
+  padding:0;
+}
+
+body {
+  text-align: center;
+  border: black solid;
+}
+
+button{
+  margin-bottom:2px;
+}
+
+.matches {
+  resize: none;
+  overflow-y: scroll;
+}
+</style>
+
+<body>
+  <header>
+    <h1>Word Game<br>Companion</h1></header>
+    <div>
+      <p>Type word to see if it's in the dictionary.</p>
+      <b>Enter Word:</b>
+      <input type="text" id="isWord" onkeyup="setValidity()" style="width:130px"></input>
+      <output id="YN">???</output>
+      <p><b>Or</b> search dictionary with criteria.</p>
+      <b>Starts With:</b>
+      <input type="text" id="start"></input>
+      <br><br>
+      <b>Ends With:</b>
+      <input type="text" id="end"></input>
+      <br><br>
+      <b>Length:</b>
+      <select id="letters">
+        <option value="-1">all lengths</option>
+        <option value="3">3 letters</option>
+        <option value="4">4 letter</option>
+        <option value="5">5 letters</option>
+        <option value="6">6 letters</option>
+        <option value="7">7+ letters</option>
+      </select>
+      <br><br>
+      <button onclick="matchWords()">Get Search Results</button>
+      <br>
+      <textarea class="matches" id="matchedWords" style="width: 250px; height: 200px" readonly=true></textarea>
+    </div>
+  </body>
+
+  </html>
