--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <b>Enter Word:</b>
     <input type="text" id="isWord" onkeyup="setValidity()" style="width:130px"></input>
     <output id="YN">???</output><br>
-    <p><strong>Or</strong> search dictionary with criteria.</p><br>
+    <p><strong>Or</strong> search dictionary with filters.</p><br>
     <b>Starts With:</b>
     <input type="text" id="start"></input>
     <br>
